protocols/tests/identities/identity_d1/slicing_err.out
error: Type mismatch in assert_eq: s[31:15] : BitVec(16) and DUT.s[31:16] : BitVec(15).
   ┌─ identities/identity_d1/slicing_err.prot:13:3
   │
13 │   assert_eq(s[31:15], DUT.s[31:16]);
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type mismatch in assert_eq: s[31:15] : BitVec(16) and DUT.s[31:16] : BitVec(15).

